# useless-discord-bot

./: .containerignore  .env-example  .gitignore  Containerfile  Makefile  README.md  app.py  bot.py  checks.py  mypy.ini  pyproject.toml
.github/workflows/: ci-cd.yml  main.yml
plugins/: channels.py  emoji.py  kill.py  owners.py
src/useless_discord_bot/: __main__.py  bot.py  tree.py
src/useless_discord_bot/plugins/: channels.py  emoji.py  guessthesprite.py  roles.py
useless_discord_bot/: __main__.py  bot.py  checks.py  tree.py
useless_discord_bot/plugins/: channels.py  emoji.py  kill.py  roles.py  voice_roles.py
