[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
show_error_codes = true
warn_unused_configs = true

# Disallow dynamic typing
#disallow_any_unimported = true
#disallow_any_expr = true
#disallow_any_decorated = true
#disallow_any_explicit = true
disallow_any_generics = true
#disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
#disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true


[tool.poe.tasks]
ruff-fix = "ruff check useless_discord_bot --fix-only --exit-zero"
black = "black useless_discord_bot"
format = ["ruff-fix", "black"]

mypy = "mypy useless_discord_bot"
ruff = "ruff check useless_discord_bot"
all = ["format", "mypy", "ruff"]


[tool.poetry]
name = "useless-discord-bot"
version = "0.1.0"
description = ""
authors = ["Parnassius <Parnassius@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.4"
cairosvg = "2.7.1"
discord-py = "2.3.2"
pillow = "10.2.0"
typenv = "0.2.0"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
mypy = "1.9.0"
poethepoet = "0.25.0"
ruff = "0.3.4"

[tool.poetry.scripts]
useless-discord-bot = "useless_discord_bot.__main__:main"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "F",     # pyflakes
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PGH",   # pygrep-hooks
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "T10",   # flake8-debugger
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "YTT",   # flake8-2020
]
fixable = [
    "I",     # isort
    "F401",  # unused-import
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false
